<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My Tower Defense</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main_menu">MainMenu</string>
    <string name="menu">Menu</string>
    <string name="jogar">Play</string>
    <string name="pontuacoes">High Scores</string>
    <string name="sair">Exit</string>
    <string name="title_activity_creditos">Credits</string>
    <string name="creditos">Credits</string>
    <string name="title_activity_scores">High Scores</string>
    <string name="sobre">Help</string>
    <string name="title_activity_sobre">Help</string>
     <string name="som">Sound</string>
        
<string name="sobre_texto">«« My Tower Defense »» \n\n 
    In this game, the objective is to prevent the enemies to successfully traverse the map from start to finish. \n\n
    For that, you have to build multiple towers strategically, and avoid passing these enemies.\n
	The game has several rounds, each with a different type of enemies, (these will vary 
	depending on the round and the game will become more difficult).
	When a tower kill an enemy, you earn more money to spend in new towers. 
	New towers can be positioned on the map when the game is in progress or even stopped.
\n\nFor now, there are 3 types of towers (ice, poison and cannon).
For each enemy who passes the map without being killed the player loses a life.
When you lose all of your lives the game is over and the final score (if better) can be stored online.\n\n

This game is available in English and Portuguese. (depending on the language of the smartphone)
\n\n	
	Ricardo Germano | DEIS-ISEC |</string>

</resources>